# bike-share-and-covid19

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.md  index.rst  sample.rst
docs/source/Approach/: method.md  method.rst
docs/source/progress/: cbcluster.md  cbcluster.rst  postcbcluster.md  postcbcluster.rst  precbcluster.md  precbcluster.rst  prepancluster.md  prepancluster.rst  tasks.md  tasks.rst
